[BDW] intel/blorp: MCS partial resolve produces unexpected result
System information
- BDW (others not tested)
- mesa-master @ f45d7703
Reproduction steps
- Make the following change to iris:
diff --git a/src/gallium/drivers/iris/iris_resolve.c b/src/gallium/drivers/iris/iris_resolve.c
index c1512122b86..9952cd8380d 100644
--- a/src/gallium/drivers/iris/iris_resolve.c
+++ b/src/gallium/drivers/iris/iris_resolve.c
@@ -944,6 +944,9 @@ iris_resource_prepare_texture(struct iris_context *ice,
if (!isl_formats_are_fast_clear_compatible(res->surf.format, view_format))
clear_supported = false;
+ if (isl_aux_usage_has_mcs(aux_usage))
+ clear_supported = false;
+
iris_resource_prepare_access(ice, res, start_level, num_levels,
start_layer, num_layers,
aux_usage, clear_supported);
- Run the following piglit executable:
$ ./bin/fbo-depthstencil clear default_fb -samples=6 -auto
Expected result
Testing default_fb.
Testing glClear(depthstencil).
PIGLIT: {"result": "pass" }
Actual result
Testing default_fb.
Testing glClear(depthstencil).
Probe color at (120,103)
Expected: 0 255 0
Observed: 0 0 0
PIGLIT: {"result": "fail" }
Edited by Nanley Chery